@@ -2,6 +2,11 @@ Revision history for Dist-Zilla-Plugin-Doppelgaenger
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - Added file/match exclusion options for gathering from
+      the source distribution
+
 0.006     2014-02-05 22:01:28-05:00 America/New_York
 
     [FIXED]
